@@ -126,7 +126,7 @@ project.ext {
     authors = 'Christopher Schnick'
     javafxVersion = '24-ea+15'
     platformName = getPlatformName()
-    languages = ["en", "nl", "es", "fr", "de", "it", "pt", "ru", "ja", "zh", "tr", "da"]
+    languages = ["en", "nl", "es", "fr", "de", "it", "pt", "ru", "ja", "zh", "tr", "da", "id", "sv", "pl"]
     jvmRunArgs = [
             "--add-opens", "java.base/java.lang=io.xpipe.app",
             "--add-opens", "java.base/java.lang=io.xpipe.core",
@@ -138,7 +138,7 @@ project.ext {
             "--add-opens", "javafx.graphics/com.sun.glass.ui=io.xpipe.app",
             "--add-opens", "javafx.graphics/javafx.stage=io.xpipe.app",
             "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=io.xpipe.app",
-            "-Xmx8g",
+            "-Xmx2g",
             "-Dio.xpipe.app.arch=$rootProject.arch",
             "-Dio.xpipe.app.languages=${String.join(",", languages)}",
             "-Dfile.encoding=UTF-8",
@@ -146,10 +146,10 @@ project.ext {
             "-Djavafx.preloader=io.xpipe.app.core.AppPreloader",
             "-Djdk.virtualThreadScheduler.parallelism=8"
     ]
-    // Disable this on Windows for now as it requires Windows 10+
-    if (org.gradle.internal.os.OperatingSystem.current().isLinux() || org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {
-        jvmRunArgs += ['-XX:+UseZGC']
-    }
+
+    // GC config
+    jvmRunArgs += ['-Xms200m', '-XX:MinHeapFreeRatio=20', '-XX:MaxHeapFreeRatio=30', '-XX:GCTimeRatio=39'];
+
     if (org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {
         jvmRunArgs += ["-Dapple.awt.application.appearance=system"]
     }
@@ -168,6 +168,17 @@ project.ext {
     }
     deeplApiKey = findProperty('DEEPL_API_KEY')
     customJavaFxPath = null
+    bundleCds = ci && fullVersion
+    windowsSchemaCanonicalVersion = getWindowsSchemaCanonicalVersion()
+}
+
+def getWindowsSchemaCanonicalVersion() {
+    def v = canonicalVersionString;
+    def last = isStage ? versionReleaseNumber : 0
+    if (v.split("\\.").length == 2) {
+        v = v + ".0"
+    }
+    return v + "." + last;
 }
 
 if (org.gradle.internal.os.OperatingSystem.current() == org.gradle.internal.os.OperatingSystem.LINUX) {
